Add email template.

--- a/email-template/index.html
+++ b/email-template/index.html
@@ -17,6 +17,11 @@ a:hover {
     color: #e02141;
 }
 
+img {
+    width: 100%;
+    height: auto;
+}
+
 @media only screen and (max-width: 580px) {
     .desc {
         font-size: 12px !important;
