Bug: Responsive images don't work in Gmail.

--- a/email-template/index.html
+++ b/email-template/index.html
@@ -18,8 +18,9 @@ a:hover {
 }
 
 img {
+    display: block;
     width: 100%;
-    height: auto;
+    height: auto !important;
 }
 
 @media only screen and (max-width: 580px) {
@@ -58,14 +59,14 @@ img {
     <table>
     <tr>
         <td>
-            <img src="http://www.gravatar.com/avatar/e538ca4cb34839d4e5e3ccf20c37c67b?size=100" alt="" width="50" height="50" style="margin: 0 0 10px 0; font-family: Arial, sans-serif; border-radius: 50%;">
+            <img src="http://www.gravatar.com/avatar/e538ca4cb34839d4e5e3ccf20c37c67b?size=100" alt="" width="50" height="50" style="margin: 0 0 10px 0; font-family: Arial, sans-serif; border-radius: 50%; width: 50px; height: 50px;">
         </td>
         <td>&nbsp;&nbsp;</td>
         <td valign="top" style="font-size: 14px; line-height: 16px; font-family: Arial, sans-serif;">
             <strong>Brad Touesnard</strong><br>
             <span style="font-size: 12px;">
-            Developer of WP Migrate DB<br>
-            Founder of <a href="http://deliciousbrains.com" style="text-decoration: none; color: #B51933;">Delicious Brains Inc.</a>
+            Developer of <a href="https://deliciousbrains.com/wp-migrate-db-pro/?utm_source=bradt.ca&utm_medium=email&utm_content=wp-migrate-db-pro-link&utm_campaign=bradt-ca-newsletter " style="text-decoration: none; color: #B51933;">WP Migrate DB Pro</a><br>
+            Founder of <a href="https://deliciousbrains.com/?utm_source=bradt.ca&utm_medium=email&utm_content=deliciousbrains-link&utm_campaign=bradt-ca-newsletter " style="text-decoration: none; color: #B51933;">Delicious Brains Inc.</a>
             </span><br>
         </td>
     </tr>
@@ -75,7 +76,7 @@ img {
 
     <datarepeater type="rss">
 
-        <div class="desc" style="font-size: 14px; line-height: 1.4em; font-family: Arial, sans-serif;">       
+        <div class="desc" style="font-size: 14px; line-height: 1.4em; font-family: Arial, sans-serif;">
             
             <p style="margin-top: 0; font-size: 16px;">
                 <strong><rssitemlink><rsstitle /></rssitemlink></strong>
